--- a/templates/stub.html
+++ b/templates/stub.html
@@ -9,7 +9,7 @@
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>User: Noor Bijapur</strong></h1>
-        <p class="text-secondary">This is a minor change to stub.html. This is for the python web server project</p>
+        <p class="text-secondary">This is a minor change to stub.html. This is for the python web server project. Text.</p>
     </div>
 {% endblock %}
 
