--- a/templates/stub.html
+++ b/templates/stub.html
@@ -11,7 +11,7 @@
         <h1 class="text-primary"><strong>User: Noor Bijapur</strong></h1>
         <p class="text-secondary">Hello! My name is Noor and I am a junior at Del Norte Highschool. Here is a collage of things I most often do.</p>
     </div>
-    <p style="background-image: black.png">
+    <p style=<img src="https://scx1.b-cdn.net/csz/news/800/2017/theoreticala.jpg" alt=”an artist's rendition of a black hole in space”>
     </div>
 {% endblock %}
 
