--- a/templates/stub.html
+++ b/templates/stub.html
@@ -11,7 +11,7 @@
         <h1 class="text-primary"><strong>User: Noor Bijapur</strong></h1>
         <p class="text-secondary">Hello! My name is Noor and I am a junior at Del Norte Highschool. Here is a collage of things I most often do.</p>
     </div>
-    <p <img class="card-img-top" src="{{ url_for('static', filename='assets/black.png') }}">
+    <img class="card-img-top" src="{{ url_for('static', filename='assets/black.png') }}">
     </div>
 {% endblock %}
 
